base/go-ethereum-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ethereum-demo
spec:
  selector:
    matchLabels:
      app: go-ethereum-demo
  template:
    metadata:
      labels:
        app: go-ethereum-demo
    spec:
      containers:
      - image: myapp
        name: go-ethereum-demo
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /api
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 5
