base/go-ethereum-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-ethereum-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-ethereum-demo
  type: ClusterIP
